# TDDSoundex

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  charUtil.cpp  charUtil.h  soundex.cpp  soundex.h  stringUtil.cpp  stringUtil.h
tests/: CMakeLists.txt  charUtil.test.cpp  soundex.test.cpp  stringUtil.test.cpp  test_main.cpp
